<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/color_main"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="30dp">

            <TextView
                android:id="@+id/ordenar_tipo_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:padding="10dp"
                android:text="Tipo:"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_ordenar_ascendente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ascendente (A-Z)" />

            <RadioButton
                android:id="@+id/btn_ordenar_descendente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descendente (Z-A)" />

            <TextView
                android:id="@+id/ordenar_hora_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:padding="10dp"
                android:text="Hora comienzo:"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_mas_proximas_primero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Más próximas primero" />

            <RadioButton
                android:id="@+id/btn_menos_proximas_primero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Menos próximas primero" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ordenar_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="CANCELAR"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ordenar_aplicar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="APLICAR"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>